[tool.poetry]
name = "pandasaurus"
version = "0.3.5"
description = "Supporting simple queries over ontology annotations in dataframes, using UberGraph queries."
authors = ["Ismail Ugur Bayindir <ugur@ebi.ac.uk>"]
license = "http://www.apache.org/licenses/LICENSE-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
oaklib = "^0.5.8"
pandas = "^2.0.1"
rdflib = "^6.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
flake8-black = "^0.3.6"
flake8-isort = "^6.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"